fix for post spacing

--- a/src/assets/sass/partials/_newsfeed.scss
+++ b/src/assets/sass/partials/_newsfeed.scss
@@ -66,6 +66,7 @@
 			}
 			.post-content {
 				padding: 5px 10px;
+				line-height: 1.42857143;
 				&.image {
 					text-align: center;
 				}
